# claco.python

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
hooks/: post_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_app.py  test_cli.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_module_name }}/cli/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_module_name }}/cli/cookiecutter/: __init__.py  commands.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.python_module_name }}/testing/: __init__.py
