[project]
name = "{{ cookiecutter.python_module_name }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christopher H. Laco", email = "claco@chrislaco.com" }
]
requires-python = ">=3.12"
dependencies = [
    "configargparse",
    "fastapi[standard]",
    "pytest",
    "pytest-cov"
]

[project.scripts]
{{ cookiecutter.python_script_name }} = "{{ cookiecutter.python_module_name }}.cli:main"
